kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-install
  namespace: atlas-install
spec:
  selector:
    app: atlas-install
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
